<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Balatarin</string>
    <string name="app_version">Unknown</string>
    <string name="title_activity_fullscreen_video">Fullscreen Video Activity</string>
    <string name="title_activity_content_viewer">Content Viewer Activity</string>
    
    <!-- TEMP -->
    <string name="updating_title">Updating</string>
    <string name="updating_msg">Updating data, please wait</string>
	
	<!-- VIDEO CONTROLLER LAYOUT -->
	<string name="vplayer_playpause">Play/Pause</string>
	<string name="vplayer_previous">Previous</string>
	<string name="vplayer_rewind">Rewind</string>
	<string name="vplayer_next">Next</string>
	<string name="vplayer_fastforward">Fast Forward</string>
	<string name="vplayer_fullscreen">Fullscreen</string>
	
	<!-- BLUETOOTH DIALOG LAYOUT -->
	<string name="btdialog_visibleToPaired">Only visible to paired devices</string>
	<string name="btdialog_visibleToAll">Visible to all</string>
	<string name="btdialog_scanning">Scanning\.\.\.</string>
	
	<!-- COMMENT FRAGMENT LAYOUT -->
	<string name="comment_add">Add</string>
	
	<!-- DESCRIPTION FRAGMENT LAYOUT -->
	<string name="description_pubdate">Published Date</string>
	<string name="description_desc">Description</string>
	
	<!-- ACTION BAR ITEMS -->
	<string name="action_refresh">Refresh</string>
	<string name="action_sync">Share Content</string>
	<string name="action_download">Download</string>
	<string name="action_share">Share</string>
	<string name="action_shareapp">Share App</string>
	<string name="action_tourapp">Tour</string>
	<string name="action_dltoday">Today\'s Content</string>
	<string name="action_dl1day">1 Day Ago</string>
	<string name="action_dl2day">2 Days Ago</string>
	<string name="action_dltest1">Test Content 1</string>
	<string name="action_dltest2">Test Content 2</string>
	<string name="action_dltest3">Test Content 3</string>
	<string name="action_deleteAll">Delete All Contents</string>
	<string name="action_about">About</string>
	<string name="action_web">View Original Article</string>
	<string name="action_bookmark">Bookmark</string>
	<string name="action_delRow">Delete</string>
	<string name="tab_hot">Hot</string>
	<string name="tab_recent">Recent</string>
	
	<!-- MENU DRAWER -->
    <string name="drawer_open">Open Drawer</string>
	<string name="drawer_close">Close Drawer</string>
	<string name="drawer_bookmarks">Bookmarks</string>
	<string name="drawer_content_type">Content Type</string>
	<string name="drawer_categories">Categories</string>
	<string name="drawer_all">All</string>
	<string name="drawer_video">Video</string>
	<string name="drawer_article">Text</string>
	<string name="drawer_audio">Audio</string>
	<string name="drawer_starred">Starred</string>
	
	
	<!-- INFO -->
	<string name="about">About</string>
	<string name="license">USC Viterbi School of Engineering, Information Sciences Institute</string>
	
	<string name="login_request">Please Login</string>
	
	<string name="sync_report">Sync Report</string>
	<string name="devices_found">devices Found</string>
	<string name="deletion_in_progress">Deletion in progress</string>
	<string name="deleting">Deleting</string>
	<string name="file_missing">File missing</string>
	<string name="cant_share_app">Cannot share app\, the file is not found</string>
	<string name="delete_all_contents">Delete all contents</string>
	<string name="confirm_delete_all">Are you sure you want to remove all the content\?</string>
	<string name="download_content">Download Content</string>
	<string name="confirm_download">Do you want to download and merge the new content?</string>
	<string name="download_content_package">Download Content Package</string>
	<string name="downloading">Downloading</string>
	<string name="download_cancel">Download Canceled</string>
	<string name="default_device_title">No device name</string>
	<string name="filters">Filters\: </string>
	<string name="news">News</string>
	<string name="device_name">Device name</string>
	<string name="paired">paired</string>
	<string name="unpaired">unpaired</string>
	<string name="sync_in_progress">Sync in progress</string>
	<string name="sending_file">Sending file</string>
	<string name="receiving_file">Receiving file</string>
	<string name="confirm_open_web_title">View Original Article</string>
	<string name="confirm_open_web">This will open the original article on the internet. Are you sure?</string>
	
	<!-- SYNC PROGGRESS -->
	<string name="connection_failed">Connection Failed</string>
	<string name="connection_successful">Connection Successful</string>
	<string name="file_sync_incomplete">File sync incomplete</string>
	<string name="file_sync_successful">File sync complete</string>
	<string name="received_file">Received file</string>
	
	<!-- DELETE PROGRESS -->
	<string name="deleting_files">Deleting Files\.\.\.</string>
	<string name="updating_metadata">Updating Metadata\.\.\.</string>
	
	<!-- TABS -->
	<string name="tab_content">View Content</string>
	<string name="tab_desc">Description</string>
	<string name="tab_comments">Comments</string>
	
	<!-- PROGRESS BAR -->
	<string name="progress_unknown_size">Downloading content (file size unknown)</string>
	<string name="progress_extracting">Extracting package</string>
	<string name="progress_merging">Merging content</string>
	<string name="progress_cleanup">Clean up</string>
	<string name="progress_downloading">Downloading content</string>
	
	<!-- BUTTONS -->
	<string name="button_ok">OK</string>
	<string name="button_yes">Yes</string>
	<string name="button_no">No</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_close">Close</string>
	<string name="button_setting">Edit Setting</string>
	
	
	<string name="balatarin_icon_text">بالاترین</string>
</resources>
