<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_sync"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>

    <!--
         <item
        android:id="@+id/action_sync_wifi"
        android:icon="@drawable/ic_action_sync_wifi"
        android:title="@string/action_sync"/>
    -->
    <!--
    item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_action_download"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_download">
        <menu>
            <item
                android:id="@+id/action_download_today"
                android:icon="@drawable/ic_action_download"
                android:title="@string/action_dltoday"/>
            <item
                android:id="@+id/action_download_yesterday"
                android:icon="@drawable/ic_action_download"
                android:title="@string/action_dl1day"/>
            <item
                android:id="@+id/action_download_2days"
                android:icon="@drawable/ic_action_download"
                android:title="@string/action_dl2day"/>
            <item
                android:id="@+id/action_delete_all"
                android:icon="@drawable/ic_action_delete"
                android:title="@string/action_deleteAll"/>
        </menu>
    </item
    -->
    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_deleteAll"/>
    <item
        android:id="@+id/action_menu_overflow"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_light"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_download">
        <menu>
            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"/>
            <item
                android:id="@+id/action_share_app"
                android:title="@string/action_shareapp"/>
            <item
                android:id="@+id/action_tour_app"
                android:title="@string/action_tourapp"/>
        </menu>
    </item>

</menu>